--- a/views/dashboard.templ
+++ b/views/dashboard.templ
@@ -40,7 +40,7 @@ templ Content(clientset *kubernetes.Clientset) {
     }
 
     <div class="min-h-screen">
-        <div class="container mx-auto px-6 py-8">
+        <div class="container mx-auto py-8">
             @DeploymentsHeader(len(deployments.Items))
             if len(deployments.Items) == 0 {
                 @NoDeployments()
@@ -70,16 +70,9 @@ templ KubeError() {
 }
 
 templ DeploymentsHeader(total int) {
-    <div class="mb-8">
-        <div class="flex items-center justify-between">
-            <div>
-                <h1 class="text-xl font-bold text-gray-800 mb-2">Deployments</h1>
-            </div>
-            <div class="bg-white px-2 py-2 shadow-sm">
-                <span class="text-sm text-gray-500">Total Deployments</span>
-                <div class="text-2xl font-bold">{ strconv.Itoa(total) }</div>
-            </div>
-        </div>
+    <div class="mb-6 flex items-center justify-between">
+        <h1 class="text-lg font-semibold text-gray-800">Deployments</h1>
+        <span class="text-gray-800 text-sm p-2 bg-white shadow-sm">Total: <span class="font-bold">{ strconv.Itoa(total) }</span></span>
     </div>
 }
 
