--- a/views/dashboard.templ
+++ b/views/dashboard.templ
@@ -22,7 +22,7 @@ templ Navigation(userEmail string) {
     <div class="container mx-auto flex justify-between gap-4 items-center px-2 md:px-0 py-4">
         <div class="p-2 my-2 shadow-sm bg-white flex items-center gap-4">
             <a href="/" class="font-semibold">Deployments</a>
-            <a href="/logs" class="text-gray-400/80">Activity Logs</a>
+            // <a href="/logs" class="text-gray-400/80">Activity Logs</a>
         </div>
         <div class="flex items-center gap-4">
             <div class="p-2 my-2 shadow-sm bg-white flex items-center gap-4">
